# ecc-sizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  NV_NVDLA_partition_m.pin_list  README.md  cmd_file  default.nix  flake.nix  remove_backslash.py  require  t28_timing_flow.tcl  trans_log  trans_log1
.github/scripts/: build-sizer.sh  install-build-deps.sh  package-sizer.sh  sizer-wrapper.sh
.github/workflows/: ci.yml
cmake/: FindPROFILER.cmake
etc/: DependencyInstaller.sh  find_messages.py
results/: NV_NVDLA_partition_m.0_best_infeasible-0706.sizes  NV_NVDLA_partition_m.0_infeasible.sizes  NV_NVDLA_partition_m.final.change-0702.sizes  NV_NVDLA_partition_m.size  NV_NVDLA_partition_m.wns_opt_final_failed.change.sizes
src/: .clang-format  CMakeLists.txt  Circuit.cpp  Circuit.h  analyze_timing.cpp  analyze_timing.h  calc.cpp  ckt.cpp  ckt.h  cmd_file  env_file  fixdrv.cpp  graphop.cpp  lib_parser.cpp  main.cpp  main.h  parser_helper.cpp  sizer.cpp  sizer.h  sizer_os.tcl  test.cpp  timer.cpp  timing_propagating.cpp  utils.cpp  utils.h
submit/: ICCAD24_sizer.sh  cmd_base_file  env_base_file  env_file
test/: cmd_base_file  regression.py  regression_test.sh
test/contest_helper/evaluation/: OpenROAD_helper.py  check_validity.py  evaluation.py  test.sh  test_aria.sh  test_mempool.sh  test_nv_m.sh  test_nv_p.sh
test/contest_helper/example/: OpenROAD_example.py
